src/MyGrammerParser.py
# Generated from MyGrammer.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyGrammerParser ( Parser ):

    grammarFileName = "MyGrammer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'int'", "'double'", 
                     "'boolean'", "'void'", "'{'", "'}'", "'if'", "';'", 
                     "'='", "'++'", "'--'", "'return'", "'else'", "'while'", 
                     "'true'", "'false'", "'-'", "'!'", "'+'", "'*'", "'/'", 
                     "'=='", "'!='", "'%'", "'<'", "'>'", "'<='", "'>='", 
                     "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Whitespace", "Newline", 
                      "COMMENT", "MULTILINE_COMMENT", "INTEGER", "DOUBLE", 
                      "ID", "STRING_LIT", "ERROR" ]

    RULE_program = 0
    RULE_func_list = 1
    RULE_func_list_prime = 2
    RULE_func_def = 3
    RULE_param_list = 4
    RULE_param_list_prime = 5
    RULE_param = 6
    RULE_data_type = 7
    RULE_code_block = 8
    RULE_stmt_list = 9
    RULE_decide = 10
    RULE_stmt = 11
    RULE_stmt_return_prime = 12
    RULE_stm_decide_prime = 13
    RULE_loop = 14
    RULE_loop_stmt = 15
    RULE_init_stmt = 16
    RULE_post_stmt = 17
    RULE_var_list = 18
    RULE_var = 19
    RULE_var_prime = 20
    RULE_expr = 21
    RULE_args = 22
    RULE_args_prime = 23
    RULE_unop = 24
    RULE_binop = 25
    RULE_and = 26
    RULE_or = 27
    RULE_number = 28

    ruleNames =  [ "program", "func_list", "func_list_prime", "func_def", 
                   "param_list", "param_list_prime", "param", "data_type", 
                   "code_block", "stmt_list", "decide", "stmt", "stmt_return_prime", 
                   "stm_decide_prime", "loop", "loop_stmt", "init_stmt", 
                   "post_stmt", "var_list", "var", "var_prime", "expr", 
                   "args", "args_prime", "unop", "binop", "and", "or", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    Whitespace=34
    Newline=35
    COMMENT=36
    MULTILINE_COMMENT=37
    INTEGER=38
    DOUBLE=39
    ID=40
    STRING_LIT=41
    ERROR=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_list(self):
            return self.getTypedRuleContext(MyGrammerParser.Func_listContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MyGrammerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.func_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_def(self):
            return self.getTypedRuleContext(MyGrammerParser.Func_defContext,0)


        def func_list_prime(self):
            return self.getTypedRuleContext(MyGrammerParser.Func_list_primeContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_func_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_list" ):
                listener.enterFunc_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_list" ):
                listener.exitFunc_list(self)




    def func_list(self):

        localctx = MyGrammerParser.Func_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.func_def()
            self.state = 61
            self.func_list_prime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_list_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_list(self):
            return self.getTypedRuleContext(MyGrammerParser.Func_listContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_func_list_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_list_prime" ):
                listener.enterFunc_list_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_list_prime" ):
                listener.exitFunc_list_prime(self)




    def func_list_prime(self):

        localctx = MyGrammerParser.Func_list_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_list_prime)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.func_list()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(MyGrammerParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(MyGrammerParser.ID, 0)

        def param_list(self):
            return self.getTypedRuleContext(MyGrammerParser.Param_listContext,0)


        def code_block(self):
            return self.getTypedRuleContext(MyGrammerParser.Code_blockContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_func_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)




    def func_def(self):

        localctx = MyGrammerParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.data_type()
            self.state = 68
            self.match(MyGrammerParser.ID)
            self.state = 69
            self.match(MyGrammerParser.T__0)
            self.state = 70
            self.param_list()
            self.state = 71
            self.match(MyGrammerParser.T__1)
            self.state = 72
            self.code_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MyGrammerParser.ParamContext,0)


        def param_list_prime(self):
            return self.getTypedRuleContext(MyGrammerParser.Param_list_primeContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = MyGrammerParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param_list)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.param()
                self.state = 75
                self.param_list_prime()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_list_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_list(self):
            return self.getTypedRuleContext(MyGrammerParser.Param_listContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_param_list_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list_prime" ):
                listener.enterParam_list_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list_prime" ):
                listener.exitParam_list_prime(self)




    def param_list_prime(self):

        localctx = MyGrammerParser.Param_list_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_list_prime)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(MyGrammerParser.T__2)
                self.state = 81
                self.param_list()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(MyGrammerParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(MyGrammerParser.ID, 0)

        def getRuleIndex(self):
            return MyGrammerParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = MyGrammerParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.data_type()
            self.state = 86
            self.match(MyGrammerParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)




    def data_type(self):

        localctx = MyGrammerParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_list(self):
            return self.getTypedRuleContext(MyGrammerParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)




    def code_block(self):

        localctx = MyGrammerParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_code_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MyGrammerParser.T__7)
            self.state = 91
            self.stmt_list()
            self.state = 92
            self.match(MyGrammerParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MyGrammerParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(MyGrammerParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):

        localctx = MyGrammerParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt_list)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 5, 6, 7, 8, 10, 11, 15, 17, 18, 19, 20, 21, 38, 39, 40, 41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.stmt()
                self.state = 95
                self.stmt_list()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecideContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_decide

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecide" ):
                listener.enterDecide(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecide" ):
                listener.exitDecide(self)




    def decide(self):

        localctx = MyGrammerParser.DecideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_decide)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MyGrammerParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def code_block(self):
            return self.getTypedRuleContext(MyGrammerParser.Code_blockContext,0)


        def data_type(self):
            return self.getTypedRuleContext(MyGrammerParser.Data_typeContext,0)


        def var_list(self):
            return self.getTypedRuleContext(MyGrammerParser.Var_listContext,0)


        def ID(self):
            return self.getToken(MyGrammerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def stmt_return_prime(self):
            return self.getTypedRuleContext(MyGrammerParser.Stmt_return_primeContext,0)


        def decide(self):
            return self.getTypedRuleContext(MyGrammerParser.DecideContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MyGrammerParser.StmtContext,0)


        def stm_decide_prime(self):
            return self.getTypedRuleContext(MyGrammerParser.Stm_decide_primeContext,0)


        def loop_stmt(self):
            return self.getTypedRuleContext(MyGrammerParser.Loop_stmtContext,0)


        def init_stmt(self):
            return self.getTypedRuleContext(MyGrammerParser.Init_stmtContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = MyGrammerParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(MyGrammerParser.T__10)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.code_block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.data_type()
                self.state = 105
                self.var_list()
                self.state = 106
                self.match(MyGrammerParser.T__10)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(MyGrammerParser.ID)
                self.state = 109
                self.match(MyGrammerParser.T__11)
                self.state = 110
                self.expr(0)
                self.state = 111
                self.match(MyGrammerParser.T__10)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.match(MyGrammerParser.ID)
                self.state = 114
                self.match(MyGrammerParser.T__12)
                self.state = 115
                self.match(MyGrammerParser.T__10)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.match(MyGrammerParser.ID)
                self.state = 117
                self.match(MyGrammerParser.T__13)
                self.state = 118
                self.match(MyGrammerParser.T__10)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 119
                self.match(MyGrammerParser.T__14)
                self.state = 120
                self.stmt_return_prime()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 121
                self.decide()
                self.state = 122
                self.match(MyGrammerParser.T__0)
                self.state = 123
                self.expr(0)
                self.state = 124
                self.match(MyGrammerParser.T__1)
                self.state = 125
                self.stmt()
                self.state = 126
                self.stm_decide_prime()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 128
                self.loop_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 129
                self.expr(0)
                self.state = 130
                self.match(MyGrammerParser.T__10)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 132
                self.init_stmt()
                self.state = 133
                self.match(MyGrammerParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_return_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_stmt_return_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_return_prime" ):
                listener.enterStmt_return_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_return_prime" ):
                listener.exitStmt_return_prime(self)




    def stmt_return_prime(self):

        localctx = MyGrammerParser.Stmt_return_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt_return_prime)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(MyGrammerParser.T__10)
                pass
            elif token in [1, 18, 19, 20, 21, 38, 39, 40, 41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.expr(0)
                self.state = 139
                self.match(MyGrammerParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stm_decide_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MyGrammerParser.StmtContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_stm_decide_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStm_decide_prime" ):
                listener.enterStm_decide_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStm_decide_prime" ):
                listener.exitStm_decide_prime(self)




    def stm_decide_prime(self):

        localctx = MyGrammerParser.Stm_decide_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stm_decide_prime)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 143
                    self.match(MyGrammerParser.T__15)
                    self.state = 144
                    self.stmt()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyGrammerParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)




    def loop(self):

        localctx = MyGrammerParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(MyGrammerParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loop(self):
            return self.getTypedRuleContext(MyGrammerParser.LoopContext,0)


        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MyGrammerParser.StmtContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_loop_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_stmt" ):
                listener.enterLoop_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_stmt" ):
                listener.exitLoop_stmt(self)




    def loop_stmt(self):

        localctx = MyGrammerParser.Loop_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_loop_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.loop()
            self.state = 153
            self.match(MyGrammerParser.T__0)
            self.state = 154
            self.expr(0)
            self.state = 155
            self.match(MyGrammerParser.T__1)
            self.state = 156
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(MyGrammerParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(MyGrammerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_init_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_stmt" ):
                listener.enterInit_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_stmt" ):
                listener.exitInit_stmt(self)




    def init_stmt(self):

        localctx = MyGrammerParser.Init_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_init_stmt)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.data_type()
                self.state = 159
                self.match(MyGrammerParser.ID)
                self.state = 160
                self.match(MyGrammerParser.T__11)
                self.state = 161
                self.expr(0)
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(MyGrammerParser.ID)
                self.state = 164
                self.match(MyGrammerParser.T__11)
                self.state = 165
                self.expr(0)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Post_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyGrammerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MyGrammerParser.ExprContext,0)


        def getRuleIndex(self):
            return MyGrammerParser.RULE_post_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPost_stmt" ):
                listener.enterPost_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPost_stmt" ):
                listener.exitPost_stmt(self)




    def post_stmt(self):

        localctx = MyGrammerParser.Post_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_post_stmt)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
